<resources>
    <string name="app_name">test</string>
    <string name="search">SEARCH</string>
    <string name="favorites">FAVORITES</string>
    <string name="action_settings">Settings</string>
    <string name="keyword">Keyword</string>
    <string name="category">Category</string>
    <string name="distance">Distance (in miles)</string>
    <string name="from">From</string>
    <string name="clear">Clear</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="def">Default</string>
    <string name="dis_hint">Enter distance(default 10 miles)</string>
    <string name="current">Current Location</string>
    <string name="other">Other. Specify Location</string>
    <string name="pre">Previous</string>
    <string name="next">Next</string>
    <string-array name="CategoryItem">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="map_mode">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>

    <string-array name="place_review">
        <item>Google Review</item>
        <item>Yelp Review</item>
    </string-array>

    <string-array name="place_sort">
        <item>Default Order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>

    <string name="info">Info</string>
    <string name="photo">Photo</string>
    <string name="map">Map</string>
    <string name="review">Review</string>
    <string name="map_mode">Travel mode</string>
    <string name="fetch">Fetching results</string>
    <string name="twitter">Twitter</string>
</resources>
